<resources>
    <string name="app_name">ClinApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello">Hello,</string>
    <string name="placeholder">Placeholder</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="new_appt">Make an Appointment</string>
    <string name="chk_appt">Check Your Appointment</string>
    <string name="signup_text">Create New Account</string>
    <string name="splash_text">This is a splash screen.</string>
    <string name="log_out">Sign Out</string>
    <string name="review_text">Review Past Appointment</string>
    <string name="your_docs">Your Documents</string>
    <string name="set_hours">Set Office Hours</string>
    <string name="chck_reviews">Check Reviews</string>
    <string name="patients">Patients</string>
    <string name="dayText">Someday</string>
    <string name="placeholderHours">xx:xx-yy:yy</string>
    <string name="office_text">Your Office Hours</string>
    <string name="sliderText">\"Time Range Picker\"</string>
    <string name="switch_text">Switch for activating scheduled time</string>
    <string name="save_text">Save Changes</string>
    <string-array name="rangeSliderValues">
        <item>80</item>
        <item>160</item>
    </string-array>
</resources>