<?xml version = "1.0" encoding = "utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.SignupActivity">

    <ProgressBar
        android:id="@+id/loading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.05"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:focusable="true"
        android:hint="@string/prompt_email"
        android:inputType="textWebEmailAddress"
        android:maxEms="20"
        android:minHeight="50dp"
        android:minEms="20"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/signup_password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:importantForAutofill="no"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintEnd_toEndOf="@+id/signup_email"
        app:layout_constraintStart_toStartOf="@+id/signup_email"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/first_name"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:importantForAutofill="no"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <EditText
        android:id="@+id/last_name"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:importantForAutofill="no"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintEnd_toEndOf="@+id/first_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/cnp"
        android:hint="@string/cnp"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:importantForAutofill="no"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintEnd_toEndOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:importantForAutofill="no"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textColorHint="#4B4C50"
        app:layout_constraintEnd_toEndOf="@+id/cnp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cnp"
        app:layout_constraintTop_toBottomOf="@+id/cnp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/signup_email"
        android:minEms="10"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

</androidx.constraintlayout.widget.ConstraintLayout>