<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/apptButton"
        style="@style/ButtonGridStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableBottom="@drawable/new_appointment"
        android:text="@string/new_appt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="200dp" />

    <Button
        android:id="@+id/chkApptButton"
        style="@style/ButtonGridStyle"
        android:layout_height="0dp"
        android:breakStrategy="simple"
        android:drawableBottom="@drawable/appointment"
        android:maxLines="2"
        android:text="@string/chk_appt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="200dp" />

    <Button
        android:id="@+id/reviewBttn"
        style="@style/ButtonGridStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableBottom="@drawable/star"
        android:text="@string/review_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apptButton"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="200dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/docBttn"
        style="@style/ButtonGridStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableBottom="@drawable/documents"
        android:text="@string/your_docs"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chkApptButton"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="200dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>